# PortDetection

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  monitor.rs  port.rs  process.rs
src-tauri/src/core/: mod.rs  monitor.rs  port_scanner.rs
src-tauri/src/models/: error.rs  mod.rs  port_info.rs  process_info.rs
src-tauri/src/platform/: mod.rs  traits.rs
src-tauri/src/platform/windows/: mod.rs  process.rs  reserved_ports.rs  tcp_table.rs  udp_table.rs
src-tauri/src/utils/: error.rs  mod.rs
src/components/: PortSearch.tsx  PortTable.tsx  ProcessDetail.tsx  ReservedPorts.tsx
src/styles/: globals.css
